apps/hubble-ingress/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hubble.pedrocoutinho.eu`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: traefik
      services:
        - name: hubble-ui
          port: 80
  tls:
    store:
      name: default
